website/i18n/zh-CN/docusaurus-plugin-content-docs/version-3.5.2/blog.mdx
---
description: Deploy a full-featured blog in no time with Docusaurus.
---

# 博客

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

博客功能可让您快速部署功能完整的博客站点。

:::info

完整配置选项请查阅[博客插件API参考文档](./api/plugins/plugin-content-blog.mdx)。

:::

## 初始设置 {#initial-setup}

要设置站点博客，请先创建`blog`目录。

然后在`docusaurus.config.js`中添加博客导航链接：

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    // ...
    navbar: {
      items: [
        // ...
        // highlight-next-line
        {to: 'blog', label: 'Blog', position: 'left'}, // or position: 'right'
      ],
    },
  },
};
```

## 添加文章 {#adding-posts}

在博客目录中创建Markdown文件即可发布文章。

例如创建文件`website/blog/2019-09-05-hello-docusaurus.md`：

```md title="website/blog/2019-09-05-hello-docusaurus.md"
---
title: Welcome Docusaurus
description: This is my first post on Docusaurus.
slug: welcome-docusaurus-v2
authors:
  - name: Joel Marcey
    title: Co-creator of Docusaurus 1
    url: https://github.com/JoelMarcey
    image_url: https://github.com/JoelMarcey.png
    socials:
      x: joelmarcey
      github: JoelMarcey
  - name: Sébastien Lorber
    title: Docusaurus maintainer
    url: https://sebastienlorber.com
    image_url: https://github.com/slorber.png
    socials:
      x: sebastienlorber
      github: slorber
tags: [hello, docusaurus-v2]
image: https://i.imgur.com/mErPwqL.png
hide_table_of_contents: false
---

Welcome to this blog. This blog is created with [**Docusaurus 2**](https://docusaurus.io/).

<!-- truncate -->

This is my first post on Docusaurus 2.

A whole bunch of exploration to follow.
```

虽然[Front Matter](./guides/markdown-features/markdown-features-intro.mdx#front-matter)可用于添加作者信息等元数据，但Docusaurus无需Front Matter也能自动推断必要元数据。完整字段说明请参阅[API文档](api/plugins/plugin-content-blog.mdx#markdown-front-matter)。

## 博客列表 {#blog-list}

博客首页（默认为`/blog`）即_博客列表页_，集中展示所有文章。

在文章中使用`<!--truncate-->`标记来定义列表页显示的摘要内容。该标记前的所有内容将作为摘要显示，且必须为独立可渲染的Markdown格式。例如：

```md title="website/blog/my-post.md" {7}
---
title: Markdown blog truncation example
---

All these will be part of the blog post summary.

<!-- truncate -->

But anything from here on down will not be.
```

对于使用`.mdx`扩展名的文件，请改用[MDX](https://mdxjs.com/)注释`{/* truncate */}`：

```md title="website/blog/my-post.mdx" {7}
---
title: MDX blog truncation Example
---

All these will be part of the blog post summary.

{/* truncate */}

But anything from here on down will not be.
```

默认每页显示10篇文章，可通过插件配置中的`postsPerPage`参数控制分页。设为`postsPerPage: 'ALL'`将禁用分页并在首页显示所有文章。还可为博客列表页添加meta描述以优化SEO：

```js title="docusaurus.config.js"
export default {
  // ...
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        blog: {
          // highlight-start
          blogTitle: 'Docusaurus blog!',
          blogDescription: 'A Docusaurus powered blog!',
          postsPerPage: 'ALL',
          // highlight-end
        },
      },
    ],
  ],
};
```

## 博客侧边栏 {#blog-sidebar}

博客侧边栏默认展示5篇最新文章，可通过插件配置中的`blogSidebarCount`参数调整。设为`blogSidebarCount: 0`将完全禁用侧边栏（包括容器），同时扩展主内容区宽度。特殊值`blogSidebarCount: 'ALL'`会展示_所有_文章。

可通过`blogSidebarTitle`参数修改侧边栏标题。例如当使用`blogSidebarCount: 'ALL'`时，可将默认的"最新文章"改为"全部文章"：

```js title="docusaurus.config.js"
export default {
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        blog: {
          // highlight-start
          blogSidebarTitle: 'All posts',
          blogSidebarCount: 'ALL',
          // highlight-end
        },
      },
    ],
  ],
};
```

## 文章日期 {#blog-post-date}

Docusaurus支持从多种路径模式（如`YYYY-MM-DD-my-blog-post-title.md`或`YYYY/MM/DD/my-blog-post-title.md`）提取`YYYY-MM-DD`格式的日期，便于按年/月分组或使用扁平结构。

<details>
<summary>Supported date extraction patterns</summary>

| Pattern | Example |
| --- | --- |
| Single file | `2021-05-28-my-blog-post-title.md` |
| MDX file | `2021-05-28-my-blog-post-title.mdx` |
| Single folder + `index.md` | `2021-05-28-my-blog-post-title/index.md` |
| Folder named by date | `2021-05-28/my-blog-post-title.md` |
| Nested folders by date | `2021/05/28/my-blog-post-title.md` |
| Partially nested folders by date | `2021/05-28-my-blog-post-title.md` |
| Nested folders + `index.md` | `2021/05/28/my-blog-post-title/index.md` |
| Date in the middle of path | `category/2021/05-28-my-blog-post-title.md` |

Docusaurus can extract the date from the posts using any of the naming patterns above. It is advisable to choose one pattern and apply it to all posts to avoid confusion.

</details>

:::tip

使用文件夹结构便于将文章图片与Markdown文件集中存放。

:::

此命名约定是可选的，您也可以通过 front matter 提供日期。由于 front matter 遵循支持日期时间标记的 YAML 语法，若需要更精确的发布日期，可使用 front matter。例如，若同一天发布多篇文章，可按当天时间排序：

```md title="earlier-post.md"
---
date: 2021-09-13T10:00
---
```

```md title="later-post.md"
---
date: 2021-09-13T18:00
---
```

## 博文作者 {#blog-post-authors}

使用 `authors` front matter 字段声明博文作者。作者至少需包含 `name` 或 `image_url` 信息。Docusaurus 会使用 `url`、`email` 和 `title` 等信息，但也允许其他自定义信息。

### 行内作者 {#inline-authors}

博文作者可直接在 front matter 中声明：

<Tabs groupId="author-front-matter">
<TabItem value="single" label="Single author">

```md title="my-blog-post.md"
---
authors:
  name: Joel Marcey
  title: Co-creator of Docusaurus 1
  url: https://github.com/JoelMarcey
  image_url: https://github.com/JoelMarcey.png
  email: jimarcey@gmail.com
  socials:
    x: joelmarcey
    github: JoelMarcey
---
```

</TabItem>
<TabItem value="multiple" label="Multiple authors">

```md title="my-blog-post.md"
---
authors:
  - name: Joel Marcey
    title: Co-creator of Docusaurus 1
    url: https://github.com/JoelMarcey
    image_url: https://github.com/JoelMarcey.png
    email: jimarcey@gmail.com
    socials:
      x: joelmarcey
      github: JoelMarcey
  - name: Sébastien Lorber
    title: Docusaurus maintainer
    url: https://sebastienlorber.com
    image_url: https://github.com/slorber.png
    socials:
      x: sebastienlorber
      github: slorber
---
```

</TabItem>
</Tabs>

:::tip

此方式最适合快速上手，或用于临时性、非固定作者。

:::

:::info

推荐使用 `authors` front matter，但旧版 `author_*` front matter 仍受支持：

```md title="my-blog-post.md"
---
author: Joel Marcey
author_title: Docusaurus 1 联合创始人
author_url: https://github.com/JoelMarcey
author_image_url: https://github.com/JoelMarcey.png
---
```

:::

### 全局作者 {#global-authors}

对于固定供稿作者，若需在每个博文中维护作者信息会显得繁琐。

可通过配置文件全局声明这些作者：

```yml title="website/blog/authors.yml"
jmarcey:
  name: Joel Marcey
  title: Co-creator of Docusaurus 1
  url: https://github.com/JoelMarcey
  image_url: https://github.com/JoelMarcey.png
  email: jimarcey@gmail.com
  socials:
    x: joelmarcey
    github: JoelMarcey

slorber:
  name: Sébastien Lorber
  title: Docusaurus maintainer
  url: https://sebastienlorber.com
  image_url: https://github.com/slorber.png
  socials:
    x: sebastienlorber
    github: slorber
```

:::tip

使用 `authorsMapPath` 插件选项配置路径。也支持 JSON 格式。

:::

在博文 front matter 中，可引用全局配置文件中声明的作者：

<Tabs groupId="author-front-matter">
<TabItem value="single" label="Single author">

```md title="my-blog-post.md"
---
authors: jmarcey
---
```

</TabItem>
<TabItem value="multiple" label="Multiple authors">

```md title="my-blog-post.md"
---
authors: [jmarcey, slorber]
---
```

</TabItem>
</Tabs>

:::info

`authors` 系统非常灵活，可满足更高级的用例：

<details>
  <summary>混合行内作者与全局作者</summary>

您可主要使用全局作者，同时保留行内作者功能：

```md title="my-blog-post.md"
---
authors:
  - jmarcey
  - slorber
  - name: 行内作者姓名
    title: 行内作者头衔
    url: https://github.com/inlineAuthor
    image_url: https://github.com/inlineAuthor
---
```

</details>

<details>
  <summary>全局作者的本地覆盖</summary>

可按博文单独覆盖全局作者数据：

```md title="my-blog-post.md"
---
authors:
  - key: jmarcey
    title: Joel Marcey 的新头衔
  - key: slorber
    name: Sébastien Lorber 的新名字
---
```

</details>

<details>
  <summary>作者配置文件的本地化</summary>

配置文件可本地化，只需创建其本地化副本于：

```bash
website/i18n/[locale]/docusaurus-plugin-content-blog/authors.yml
```

</details>

:::

无论是通过 front matter 还是作者映射表声明的作者，都必须包含姓名或头像（或两者兼备）。若某篇文章的所有作者均未设置姓名，Docusaurus 会以紧凑形式显示其头像。效果可参见[此测试文章](/tests/blog/2022/01/20/image-only-authors)。

:::warning[Feed 生成]

[RSS 订阅源](#feed)要求设置作者的 email 字段，否则作者不会出现在订阅源中。

:::

### 作者页面 {#authors-pages}

作者页面功能为可选功能，主要适用于多作者博客场景。

您可通过在[全局作者配置](#global-authors)中添加 `page: true` 属性，为每位作者单独启用此功能：

```yml title="website/blog/authors.yml"
slorber:
  name: Sébastien Lorber
  // highlight-start
  page: true # Turns the feature on - route will be /authors/slorber
  // highlight-end

jmarcey:
  name: Joel Marcey
  // highlight-start
  page:
    # Turns the feature on - route will be /authors/custom-author-url
    permalink: '/custom-author-url'
  // highlight-end
```

博客插件现在将生成：

- 每位作者的专属页面（[示例](/blog/authors/slorber)），列出他们贡献的所有博客文章
- 作者索引页（[示例](/blog/authors)），按`authors.yml`中的顺序列出所有作者

:::warning[关于内联作者]

此功能仅支持[全局作者](#global-authors)，[内联作者](#inline-authors)不可用。

:::

## 博客文章标签 {#blog-post-tags}

标签通过front matter声明，提供了另一种分类维度。

可以内联定义标签，或引用预定义在[`标签文件`](api/plugins/plugin-content-blog.mdx#tags-file)（通常为`blog/tags.yml`）中的标签（可选）。

下例中：

- `docusaurus`引用的是`blog/tags.yml`中预定义的标签键
- `Releases`是内联标签，因为它不存在于`blog/tags.yml`

```md title="blog/my-post.md"
---
title: 'My blog post'
tags:
  - Releases
  - docusaurus
---

Content
```

```yml title="blog/tags.yml"
docusaurus:
  label: 'Docusaurus'
  permalink: '/docusaurus'
  description: 'Blog posts related to the Docusaurus framework'
```

## 阅读时长 {#reading-time}

Docusaurus会根据字数统计为每篇博客生成阅读时长估算。我们提供了自定义此功能的选项。

```js title="docusaurus.config.js"
export default {
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        blog: {
          // highlight-start
          showReadingTime: true, // When set to false, the "x min read" won't be shown
          readingTime: ({content, frontMatter, defaultReadingTime}) =>
            defaultReadingTime({content, options: {wordsPerMinute: 300}}),
          // highlight-end
        },
      },
    ],
  ],
};
```

`readingTime`回调接收三个参数：博客内容文本（字符串形式）、front matter（字符串键值对记录）以及默认阅读时长函数。它返回一个数字（阅读分钟数）或`undefined`（禁用该页面的阅读时长显示）。

默认阅读时长函数可接受额外选项：`wordsPerMinute`（数字类型，默认300）和`wordBound`（字符串到布尔值的函数）。当传入`wordBound`的字符串应为单词边界（默认为空格、制表符和换行符）时，该函数应返回`true`。

:::tip

通过回调满足所有自定义需求：

<Tabs>
<TabItem value="disable-per-post" label="单篇禁用">

**禁用单篇文章的阅读时长：**

```js title="docusaurus.config.js"
export default {
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        blog: {
          showReadingTime: true,
          // highlight-start
          readingTime: ({content, frontMatter, defaultReadingTime}) =>
            frontMatter.hide_reading_time
              ? undefined
              : defaultReadingTime({content}),
          // highlight-end
        },
      },
    ],
  ],
};
```

用法：

```md "my-blog-post.md"
---
hide_reading_time: true
---

该页面将不再显示阅读时长统计！
```

</TabItem>
<TabItem value="passing-options" label="传递选项">

**向默认阅读时长函数传递选项：**

```js title="docusaurus.config.js"
export default {
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        blog: {
          // highlight-start
          readingTime: ({content, defaultReadingTime}) =>
            defaultReadingTime({content, options: {wordsPerMinute: 100}}),
          // highlight-end
        },
      },
    ],
  ],
};
```

</TabItem>
<TabItem value="using-custom-algo" label="使用自定义算法">

**使用自定义的阅读时长实现：**

```js title="docusaurus.config.js"
import myReadingTime from './myReadingTime';

export default {
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        blog: {
          // highlight-next-line
          readingTime: ({content}) => myReadingTime(content),
        },
      },
    ],
  ],
};
```

</TabItem>
</Tabs>

:::

## 订阅源 {#feed}

通过配置`feedOptions`可生成RSS/Atom/JSON订阅源。默认生成RSS和Atom源。要禁用订阅源生成，请将`feedOptions.type`设为`null`。

```ts
type FeedType = 'rss' | 'atom' | 'json';

type BlogOptions = {
  feedOptions?: {
    type?: FeedType | 'all' | FeedType[] | null;
    title?: string;
    description?: string;
    copyright: string;

    language?: string; // possible values: http://www.w3.org/TR/REC-html40/struct/dirlang.html#langcodes
    limit?: number | false | null; // defaults to 20
    // XSLT permits browsers to style and render nicely the feed XML files
    xslt?:
      | boolean
      | {
          //
          rss?: string | boolean;
          atom?: string | boolean;
        };
    // Allow control over the construction of BlogFeedItems
    createFeedItems?: (params: {
      blogPosts: BlogPost[];
      siteConfig: DocusaurusConfig;
      outDir: string;
      defaultCreateFeedItems: (params: {
        blogPosts: BlogPost[];
        siteConfig: DocusaurusConfig;
        outDir: string;
      }) => Promise<BlogFeedItem[]>;
    }) => Promise<BlogFeedItem[]>;
  };
};
```

使用示例：

```js title="docusaurus.config.js"
export default {
  // ...
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        blog: {
          // highlight-start
          feedOptions: {
            type: 'all',
            copyright: `Copyright © ${new Date().getFullYear()} Facebook, Inc.`,
            createFeedItems: async (params) => {
              const {blogPosts, defaultCreateFeedItems, ...rest} = params;
              return defaultCreateFeedItems({
                // keep only the 10 most recent blog posts in the feed
                blogPosts: blogPosts.filter((item, index) => index < 10),
                ...rest,
              });
            },
          },
          // highlight-end
        },
      },
    ],
  ],
};
```

订阅源可通过以下路径访问：

<Tabs>
<TabItem value="RSS">

```text
https://example.com/blog/rss.xml
```

</TabItem>
<TabItem value="Atom">

```text
https://example.com/blog/atom.xml
```

</TabItem>
<TabItem value="JSON">

```text
https://example.com/blog/feed.json
```

</TabItem>
</Tabs>

## 高级主题 {#advanced-topics}

### 纯博客模式 {#blog-only-mode}

您可以让博客文章列表页替代独立首页，成为站点根路径的展示页面。将`routeBasePath`设置为`'/'`后，博客将通过根路由`example.com/`提供服务，而非子路由`example.com/blog/`。

```js title="docusaurus.config.js"
export default {
  // ...
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        // highlight-next-line
        docs: false, // Optional: disable the docs plugin
        blog: {
          // highlight-next-line
          routeBasePath: '/', // Serve the blog at the site's root
          /* other blog options */
        },
      },
    ],
  ],
};
```

:::warning

请务必删除现有的`./src/pages/index.js`首页文件，否则会出现两个文件映射到同一路由的情况！

:::

:::warning

若禁用文档插件，请同步移除配置文件中所有对文档插件的引用。特别要注意删除导航栏中与文档相关的条目。

:::

:::tip

针对仅需文档功能的用户，我们还提供"纯文档模式"。详细配置说明及`routeBasePath`参数详解请参阅[纯文档模式](./guides/docs/docs-introduction.mdx)。

:::

### 多博客系统 {#multiple-blogs}

经典主题默认采用单博客架构，仅包含一个博客插件实例。若需在单个站点部署多个博客，可通过在`docusaurus.config.js`的`plugins`选项中配置额外博客插件实现。

为第二个博客设置专属的`routeBasePath`路由路径（需与首个博客路径不同以避免冲突），同时通过`path`参数指定该博客内容的存储目录路径。

如[多实例插件文档](./using-plugins.mdx#multi-instance-plugins-and-plugin-ids)所述，需为各插件分配唯一ID。

```js title="docusaurus.config.js"
export default {
  // ...
  plugins: [
    [
      '@docusaurus/plugin-content-blog',
      {
        /**
         * Required for any multi-instance plugin
         */
        id: 'second-blog',
        /**
         * URL route for the blog section of your site.
         * *DO NOT* include a trailing slash.
         */
        routeBasePath: 'my-second-blog',
        /**
         * Path to data on filesystem relative to site dir.
         */
        path: './my-second-blog',
      },
    ],
  ],
};
```

实际案例可参考我们部署的[第二个测试博客](/tests/blog)。